Fixed: gap column

--- a/css/index.css
+++ b/css/index.css
@@ -43,7 +43,7 @@ body{
 }
 
 .container-sm{
-    width: 900px;
+    width: 1000px;
     margin: 0 auto;
 }
 
@@ -120,6 +120,11 @@ body{
 
 .title-business-plan{
     margin-top: 60px;
+    font-size: 35px;
+}
+
+.row, .fatturazioni{
+    justify-content: space-around;
 }
 
 .col-3{
@@ -140,10 +145,12 @@ body{
 
 .status{
     padding-top: 20px;
+    font-size: 25px;
 }
 
 .euro{
     padding-top: 20px;
+    font-size: 15px;
 }
 
 .month{
@@ -161,6 +168,7 @@ body{
 .thirty-days{
     margin-top: 30px;
     margin-left: 40px;
+    font-weight: 300;
 }
 
 .compra-ora{
@@ -178,4 +186,9 @@ body{
 
 .check{
     color: rgb(11, 135, 135);
+}
+
+.team{
+    padding: 15px;
+    text-align: center;
 }
